--- a/SocialSoluctionMVC/Views/Home/Index.cshtml
+++ b/SocialSoluctionMVC/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Início";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Avaliação técnica da <a href="https://www.socialsolutions.com.br/">Social Solution </a>.</p>
+    <p>Aplicação web com ASP.Net Core 3.1 MVC.</p>
+    <p>Foi utilizado scaffold para geração inicial das telas e posterior refatoração.</p>
 </div>
