--- a/SocialSoluctionMVC/Views/Clientes/Index.cshtml
+++ b/SocialSoluctionMVC/Views/Clientes/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Clientes";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var searchText = TempData["searchText"];
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -10,6 +11,10 @@
 <p>
     <a asp-action="Create">Adicionar</a>
 </p>
+<form asp-action="Index" method="post">
+    <input type="text" name="searchText" value="@searchText" />
+    <input type="submit" value="Localizar" class="btn btn-primary" />
+</form>
 <table class="table">
     <thead>
         <tr>
