--- a/SocialSoluctionMVC/Views/Anuncios/Create.cshtml
+++ b/SocialSoluctionMVC/Views/Anuncios/Create.cshtml
@@ -15,12 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
+                <select asp-for="Tipo" class="form-control" asp-items="ViewBag.Tipo"></select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class ="form-control" asp-items="ViewBag.ClienteId"></select>
+                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.Clientes"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
