--- a/SocialSoluctionMVC/Views/Anuncios/Details.cshtml
+++ b/SocialSoluctionMVC/Views/Anuncios/Details.cshtml
@@ -15,13 +15,13 @@
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
+            @ViewData["tipo"]
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.CPFCNPJ)
+            @Html.DisplayFor(model => model.Cliente.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
