--- a/SocialSoluctionMVC/Views/Clientes/Create.cshtml
+++ b/SocialSoluctionMVC/Views/Clientes/Create.cshtml
@@ -27,9 +27,10 @@
                 <label asp-for="CPFCNPJ" class="control-label"></label>
                 <input asp-for="CPFCNPJ" class="form-control" />
                 <span asp-validation-for="CPFCNPJ" class="text-danger"></span>
+                <span id="CPFCNPJInvalidos" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Adicionar" class="btn btn-primary" />
+                <input type="button" id=btnSalvar value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -41,4 +42,35 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $('#btnSalvar').click(function () {
+            var vCpfCnpj = $("#CPFCNPJ").val();
+            var isOK = false;
+            $.get("https://localhost:44326/Clientes/ValidaCPFCNPJ/" + vCpfCnpj,
+                function (data, status) {
+                    if (!data) {
+                        $("#CPFCNPJInvalidos").html('Informe um CPF ou CNPJ válido.');
+                    }
+                    else {
+                        $.post("https://localhost:44326/Clientes/ValidaCPFExistente",
+                            {
+                                id: 0,
+                                cpfCnpj: vCpfCnpj
+                            },
+                            function (data, status) {
+                                if (!data) {
+                                    $("#CPFCNPJInvalidos").html('CPF ou CNPJ já vinculado a outro cliente.');
+                                }
+                                else {
+                                    $("form").submit();
+                                }
+                            }
+                        );
+                    }
+                }
+            );
+        });
+    </script>
 }
+    
